[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-babushka-commons"
version = "0.1.3"
description = "Common utilities and database connections for awesome-babushka projects"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aio-pika==9.6.1",
    "aiormq==6.9.3",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "fastapi==0.116.1",
    "idna==3.10",
    "multidict==6.7.1",
    "pamqp==3.3.0",
    "propcache==0.4.1",
    "pyasn1==0.6.2",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pymongo==4.13.2",
    "python-jose==3.3.0",
    "requests==2.32.4",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "yarl==1.23.0",
]

[project.urls]
"Homepage" = "https://github.com/himansu9805/awesome-babushka-commons"
"Bug Tracker" = "https://github.com/himansu9805/awesome-babushka-commons/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
